tests/failing/powmat.tail
let v1:[int]2 = reshape{[int],[1,2]}([3,7],iotaV(9)) in
let v2:[int]2 = prArrI(v1) in
let v5:[int]2 = prArrI(power(fn v3:[int]2 => let v4:[int]2 = v3 in
                 transp{[int],[2]}(vrotate{[int],[2]}(b2iV(tt),transp{[int],[2]}(v4))),2,v1)) in
let v8:[int]2 = prArrI(power(fn v6:[int]2 => let v7:[int]2 = v6 in
                 transp{[int],[2]}(vrotate{[int],[2]}(~1,transp{[int],[2]}(v7))),2,v1)) in
i2d(b2iV(ff))
